--- a/style.css
+++ b/style.css
@@ -68,8 +68,7 @@
     align-items: flex-start;
     padding: 0;
     gap: 15px;
-    justify-content: flex-start;
-
+    flex-wrap: wrap;
 }
 
 .card1 {
@@ -81,6 +80,8 @@
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.03);
     border-radius: 20px;
     margin: 0;
+    flex-grow: 1;
+
 }
 
 
@@ -145,6 +146,8 @@
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.03);
     border-radius: 20px;
     margin: 0;
+
+    flex-grow: 1;
 }
 
 .subtitleCard2 {
@@ -163,6 +166,7 @@
 
     display: inline-block;
     transition: transform 300ms;
+
 }
 
 .wrapperImg {
@@ -200,6 +204,7 @@
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.03);
     border-radius: 20px;
     margin: 0;
+    flex-grow: 1;
 }
 
 .subtitleCard3 {
@@ -434,3 +439,23 @@
     border-left: 3px solid #FFFFFF;
 }
 
+@media screen and (max-width: 1280px){
+    .cards{
+        flex-direction: column;
+    }
+    .header{
+        flex-direction: column;
+        padding:0;
+    }
+    .titleHeader {
+        font-size: 30px;
+    }
+    .slider__arrow{
+        display: none;
+    }
+}
+@media screen and (min-width: 1440px){
+        .cards {
+            flex: 0 0 calc(100% / 4); /* устанавливаем ширину для больших экранов */
+        }
+    }
